2017-03-29      Gaius Mulley <gaius@gnu.org>

	* gm2/mc-boot-ch/Glibc.c:  return the result from
	  close.

2017-03-21      Gaius Mulley <gaius@gnu.org>

	* gm2/m2.flex:  match new cpp file start/end codes.

2017-03-21      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GCCDeclare.mod:  detect circular
          dependency in AssertAllTypesDeclared and generate
          error message rather than abort.
	* corrected a number of regression test programs.

2017-03-18      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  many changes to the way the parser
          generator is built.  A number of cyclic dependancies
          have been removed and building times are much shorter.

2017-03-14      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-gcc/m2type.c:  get_unsigned (New function).
          BuildSubrangeType use get_unsigned.
	* gm2/gm2-libs-iso/SysClock.mod:  undo previous commit to restore
	source contents.
	* gm2/ulm-lib-gm2/std/Calendar.mod:  CDate changed to use
          temporary variables to avoid dangerous code which is exposed
          by overflow errors during gimplification.
	* gm2/patches/gcc/5.2.0/11-patches:  New file.
	* gm2/patches/gcc/5.2.0/12-patches:  New file.

2017-03-14      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GCCDeclare.mod:  check range of type conversion
	  of constants.
	* gm2/gm2-compiler/M2GenGCC.mod:  BuildFunctValue now returns tree
          which must be added to the statement list.  GenerateCleanup
          (New procedure function).  CheckCleanup (New procedure function).
          CodeCall changed since CodeDirectCall and CodeIndirectCall now
	  return trees.
	* gm2/gm2-compiler/SymbolTable.def:  removed white space.
	* gm2/gm2-compiler/SymbolTable.mod:  HasVarParameters (New procedure
	  function).
	* gm2/gm2-gcc/m2block.def:  export begin_statement_list,
	  push_statement_list, pop_statement_list.
	* gm2/gm2-gcc/m2decl.c:  BuildParameterDeclaration set
	  the address of a VAR parameter to TREE_READONLY.