@@ -13,7 +13,7 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. 
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
 if $tracelevel then {
     strace $tracelevel
@@ -40,7 +40,7 @@ foreach testcase [lsort [glob -nocomplain $srcdir/$subdir/*.mod]] {
     }
 
     # do not recompile the support module - and do not test it either!
-    if { $testcase == "rangesupport.mod" } {
+    if { $testcase == "$srcdir/$subdir/rangesupport.mod" } {
         continue
     }
 
